# Python-projects

./: 00_intro_python.ipynb  01_basics.ipynb  01_expressions.ipynb  04_dictionaries.ipynb  05_loops_control_flow.ipynb  07_information_flow.ipynb  README.md  intro_python.ipynb  untitled.ipynb
.devcontainer/: devcontainer.json
count_down_timer/: main.py
data_sweeper/: main.py  pyproject.toml
deductive_logic_game/: main.py
diamond patteran/: main.py
environment/: demoj.ipynb
hangman/: README.md  pyproject.toml
mad_lib/: main.py
myquiz_app/: main.py  pyproject.toml  quiz_results.json  users.json
password_generator_assignment/: main.py  pyproject.toml
personal_library_manager/: library.txt  main.py
personal_library_manager_app/: library.txt  main.py  pyproject.toml
project_4/assignment00_t0_5/: 02_lists.ipynb  03_if_statements.ipynb  06_functions.ipynb  readme.md
project_4/assignment_01/QR_code_encoder_decoder/: main.py  pyproject.toml  requirements.txt
pyramid patteran/: main.py
python_translato/: main.py  packages.txt  pyproject.toml
quiz_app/: main.py  pyproject.toml  quiz_results.json  users.json
rock_papper_sessior_game/: main.py  pyproject.toml
secure_data_encryption_assignment/: main.py  pyproject.toml
story_generator_app/: main.py  pyproject.toml
student report card generator/: main.py
student_report _card _generator/: pyproject.toml  students.json
student_report_card_generator/: main.py  pyproject.toml  students.json
todo-app/: main.py  pyproject.toml
units_converter_app/: README.md  main.py  pyproject.toml
(+22 files in other folders)
