[project]
name = "python-translato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "docx2python>=3.5.0",
    "easyocr>=1.7.2",
    "googletrans>=4.0.2",
    "gtts>=2.5.4",
    "pyaudio>=0.2.14",
    "pypdf>=5.4.0",
    "pyperclip>=1.9.0",
    "pytesseract>=0.3.13",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.14.1",
    "streamlit>=1.43.2",
    "tesseract>=0.1.3",
    "translate>=3.6.1",
    "wavio>=0.0.9",
]
