[project]
name = "qr-code-encoder-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyzbar>=0.1.9",
    "qrcode>=8.1",
    "rcode>=0.7.0",
    "streamlit>=1.44.1",
]
